<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.OpeningScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_stock"
        android:scaleType="centerCrop"/>

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_shadow"
        />

    <ImageView
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/app_full_logo"
        android:layout_centerHorizontal="true"
        />

    <View
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_alignParentBottom="true"
        android:rotation="180"
        android:background="@drawable/bg_shadow"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BoldText"
            android:text="@string/channel_wearable_dash_cam"
            android:textColor="?txtSecondary"
            android:textSize="@dimen/_25ssp"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MediumText"
            android:text="@string/fitt360"
            android:textColor="?txtSecondary"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            />


        <Button
            android:id="@+id/btn_get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_curved_primary"
            android:text="@string/get_started"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/MediumText"
            android:padding="@dimen/_10sdp"
            android:textAllCaps="false"
            android:textColor="?txtPrimary"/>
    </LinearLayout>`



</RelativeLayout>