<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorAccent"
    tools:context=".view.activity.BluetoothConnectionActivity">

    <include
        android:id="@+id/header"
        android:visibility="visible"
        layout="@layout/common_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:id="@+id/llt_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumText"
            android:text="@string/discovered_device"
            android:textColor="?txtPrimary"
            android:textAlignment="viewStart"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"

            />
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/ivloader"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/ic_loading" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bluetooth_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/llt_discover"
        android:padding="@dimen/_10sdp"
        android:layout_above="@+id/btn_started"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <RelativeLayout
        android:id="@+id/btn_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_curved_secondary"
        android:backgroundTint="@color/window_background"
        android:text="@string/get_started"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        style="@style/MediumText"
        android:padding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:textColor="?txtSecondary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumText"
            android:layout_centerInParent="true"
            android:text="@string/lets_start"
            android:textColor="?txtSecondary"
            android:textAlignment="viewStart"
            android:layout_gravity="center_vertical"
            />

    </RelativeLayout>



</RelativeLayout>