<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    tools:context=".view.fragment.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BoldText"
        android:text="@string/setting"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="?txtPrimary"/>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:layout_below="@+id/header"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/bg_curved_primary"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <TextView
                    android:id="@+id/tv_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Device Name"
                    style="@style/MediumText"
                    android:layout_centerVertical="true"
                    android:textColor="?txtPrimary"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/tv_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected"
                    style="@style/MediumText"
                    android:layout_centerVertical="true"
                    android:textColor="?txtActive"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/rlt_device_info">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_info"
                    style="@style/MediumText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="?txtPrimary"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:rotation="180"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="?bgGreyShadow"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/rlt_camera_setting">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_setting"
                    style="@style/MediumText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="?txtPrimary"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:rotation="180"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="?bgGreyShadow"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:id="@+id/rlt_record_setting">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record_setting"
                    style="@style/MediumText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="?txtPrimary"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:rotation="180"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="?bgGreyShadow"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BoldText"
                android:text="@string/application_setting"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="?txtPrimary"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/rlt_app_version">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    style="@style/MediumText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="?txtPrimary"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/tv_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.1.1"
                    style="@style/RegularText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="?txtPrimary"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:layout_toStartOf="@+id/iv_app_back"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />

                <ImageView
                    android:id="@+id/iv_app_back"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_centerVertical="true"
                    android:rotation="180"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="?bgGreyShadow"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/rlt_contact_us">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    style="@style/MediumText"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="?txtPrimary"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:rotation="180"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="?bgGreyShadow"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</FrameLayout>